Navigation - fixed third level menu being entirely visibly selected when only a single third-level item was selected

--- a/test/dummy/app/frontend/stylesheets/components/_navigation.scss
+++ b/test/dummy/app/frontend/stylesheets/components/_navigation.scss
@@ -227,7 +227,9 @@ $navigation-hover-bg: rgba($black, .05);
 
   // Second / third-level active state
   .selected {
-    a, button, span {
+    > a,
+    > button,
+    > span {
       @include color-link($primary-color, $primary-color);
     }
   }
